# CheckCheque

./: .gitignore  .pre-commit-config.yaml  config.py  mail.py  main.py  pokupochki.db  pyproject.toml
bot/: bot.py  utils.py
src/: bot.py  config.py
src/services/: db.py  keyboads.py  mail.py  main.py  render.py  utils.py
